--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -1,26 +1,41 @@
+.About {
+  height: 70vh;
+  padding: 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 900px;
+  margin: 2rem auto;
+}
+
 .About #bibek-saha-image {
-  height: 350px;
-  display: block;
-  margin: 20px auto;
+  height: 400px;
 }
 
 .About p {
-  text-align: center;
+  text-align: left;
   font-size: 1.2rem;
-  margin: 0 auto;
   color: #555454;
   font-weight: 500;
+  margin-left: 50px;
+  padding-top: 40px;
 }
 
 @media (max-width: 500px) {
+  .About {
+    display: block;
+    width: 80%;
+    margin: 0 auto;
+    height: 100%;
+  }
   .About img {
     height: 300px;
   }
 
   .About p {
     font-size: 1rem;
-    width: 80%;
     text-align: left;
+    margin-top: 20px;
     font-weight: normal;
   }
 }
