--- a/src/components/TimeDisplay/TimeDisplay.css
+++ b/src/components/TimeDisplay/TimeDisplay.css
@@ -7,6 +7,7 @@
   justify-content: center;
   border: 3px solid black;
   padding: 10rem 1.2rem;
+  margin-bottom: 30px;
 }
 
 @media (max-width: 500px) {
