--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -26,13 +26,15 @@
     display: block;
     width: 80%;
     margin: 0 auto;
-    height: 100%;
   }
-  .About img {
+  
+  .About #bibek-saha-image {
     height: 300px;
   }
 
   .About p {
+    margin: 0;
+    padding: 0;
     font-size: 1rem;
     text-align: left;
     margin-top: 20px;
